# Polkadot-Attestations

./: README.md
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/contexts/: AccountContext.tsx  ApiContext.tsx
frontend/src/components/pages/: Attest.tsx  CreateSchema.tsx  Home.tsx  Scan.tsx  SearchSchemasById.tsx  SelectSchemaToAttest.tsx  UserDashboard.tsx  architecture.tsx  attestations.tsx  createSchema.tsx  datasection.tsx  footer.tsx  howitworks.tsx  mainsection.tsx  makeattestation.tsx  pallet.tsx  scan.tsx  schemas.tsx  secured.tsx  whyatt.tsx
frontend/src/components/templates/Header/: Header.tsx
frontend/src/mocks/: getSchemas.tsx
frontend/src/theme/: theme.ts
pallet/attestations-pallet/: Cargo.toml
pallet/attestations-pallet/src/: schema.rs
pallet/pallet-attestations/src/: weights.rs
pallets/pallet-attestations-v-0.1.0/src/: lib.rs
polkattest-node/: Cargo.toml  Dockerfile  README.md
polkattest-node/.github/workflows/: ci.yml  pr-reminder.yml  release.yml
polkattest-node/node/: Cargo.toml
polkattest-node/node/src/: benchmarking.rs  chain_spec.rs  command.rs  rpc.rs  service.rs
polkattest-node/pallets/pallet-attestations/src/: lib.rs  schema.rs  weights.rs
polkattest-node/runtime/: Cargo.toml
polkattest-node/runtime/src/: benchmarks.rs  lib.rs
polkattest-node/runtime/src/configs/: mod.rs
substrate-node-template/pallets/attestations-pallet/: Cargo.toml
substrate-node-template/pallets/attestations-pallet/src/: lib.rs  schema.rs
substrate-node-template/pallets/pallet-attestations/src/: lib.rs
substrate-node-template/runtime/: Cargo.toml
substrate-node-template/runtime/src/: lib.rs
