[package]
name = "attestations-pallet"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
frame-support = { default-features = false, version = "37.0.0" }
frame-system = { default-features = false, version = "37.1.0" }
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.3", default-features = false, features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
sp-runtime = { default-features = false, version = "39.0.0", features = ["std"] }

[lints]
workspace = true

[features]
default = ["std"]
std = [
  "frame-support/std",
  "frame-system/std",
  "codec/std",
  "scale-info/std",
]
